[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Hazards/Fly Man.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/flyMan_still_stand.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/flyMan_still_fly.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/flyMan_still_jump.png" type="Texture" id=4]
[ext_resource path="res://images/enemies/flyMan_fly.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "fly",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 38.6718, 0.56554 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 10, 500 )

[node name="FlyMan" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PoolVector2Array( 52.8819, 5.03674, 39.2972, -18.7365, 17.7881, -34.5853, 61.561, -50.8115, 60.8063, -63.2641, 53.2593, -68.5471, -61.456, -67.7924, -62.2107, -55.3397, -56.173, -47.4153, -19.5698, -34.5853, -40.7016, -17.9818, -48.626, 6.1688, -49.0033, 26.5459, -47.1166, 46.9229, -48.626, 69.9414, 48.731, 70.3188 )

[node name="Sprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.631865, 65.4334 )
shape = SubResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
editor/display_folded = true

[node name="Collision" type="CollisionShape2D" parent="Trigger"]
visible = false
position = Vector2( 0, -500 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Trigger" to="." method="_on_trigger"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="reset_smooth_stop"]
